@@ -1,3 +1,12 @@
+2005-01-22  Bruno Haible  <bruno@clisp.org>
+
+	* compiler.lisp (c-GLOBAL-FUNCTION-CALL): Generate a SYMBOL-FUNCTION
+	instruction with reference to *denv*.
+	(c-FUNCTION): Likewise with null environment.
+	(simplify): Don't drop (SYMBOL-FUNCTION) in non-for-value position if
+	SAFETY = 3.
+	Found by Paul Dietz's ansi-tests test suite.
+
 2005-02-10  Sam Steingold  <sds@gnu.org>
 
 	handle OPTIMIZE PROCLAIMations
